--- a/Public/_config.yml
+++ b/Public/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-minimal
+title: Your Site Title
+description: Your site description
+markdown: kramdown
+kramdown:
+  input: GFM
