--- a/Public/_config.yml
+++ b/Public/_config.yml
@@ -1,6 +1,2 @@
 theme: jekyll-theme-minimal
-title: Your Site Title
-description: Your site description
-markdown: kramdown
-kramdown:
-  input: GFM
+title: Steve Goulet
