--- a/Public/deploy.yml
+++ b/Public/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # or your default branch name
+      - main
 
 jobs:
   deploy:
@@ -11,9 +11,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
+
+      - name: Install Jekyll
+        run: |
+          gem install bundler
+          gem install jekyll
+
+      - name: Build with Jekyll
+        run: jekyll build --source ./Public --destination ./_site
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./Public  # Specify the folder containing your site files
-          publish_branch: gh-pages  # The branch to deploy to
+          publish_dir: ./_site
+          publish_branch: gh-pages
